--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,14 @@ go.work.sum
 
 # env file
 .env
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
